bug 230099: don't serialize RDF literals inline if they contain newlines. r=rjc, sr=bz-vacation